gccida/g2/gen_sse_movsfcc
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_sse_movsfcc/src/insn-emit.c:3018:18: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v13 = gen_rtx( ( rtx_code)*( _WORD *)operand1, VOIDmode, operand4, operand5); 
                 ^~~~~~~~
                 rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_sse_movsfcc/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_sse_movsfcc/src/insn-emit.c:3018:27: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
v13 = gen_rtx( ( rtx_code)*( _WORD *)operand1, VOIDmode, operand4, operand5); 
               ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_sse_movsfcc/src/obj/insn-emit.o] Error 1
